--- a/Backend/package.json
+++ b/Backend/package.json
@@ -4,7 +4,8 @@
   "description": "backend",
   "main": "index.js",
   "scripts": {
-    "dev": "ts-node src/index.ts"
+    "dev": "ts-node src/server.ts",
+    "pdev": "ts-node src/index.ts"
   },
   "author": "",
   "license": "ISC",
