--- a/package.json
+++ b/package.json
@@ -13,7 +13,12 @@
   "license": "ISC",
   "dependencies": {
     "@types/node": "^18.0.6",
-    "openai": "^4.67.1"
+    "@types/react": "^18.3.11",
+    "@types/react-dom": "^18.3.1",
+    "openai": "^4.67.1",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^6.27.0"
   },
   "devDependencies": {
     "concurrently": "^9.0.1"
