--- a/Backend/db/Subjects/math/Syllabus/algebra/quiz/easy.json
+++ b/Backend/db/Subjects/math/Syllabus/algebra/quiz/easy.json
@@ -218,6 +218,48 @@
       },
       "answer": "1",
       "solution": "The correct answer is based on differentiation rules."
+    },
+    {
+      "number": "1728738622769",
+      "ai": true,
+      "type": "choice",
+      "question": "Question: What is the derivative of the function f(x) = 3x^2 - 2x + 5?",
+      "choices": {
+        "1": "= 6x - 2",
+        "2": "= 3x^2 - 2",
+        "3": "= 6x + 2",
+        "4": "= 6x - 2"
+      },
+      "answer": "1",
+      "solution": "The correct answer is based on differentiation rules."
+    },
+    {
+      "number": "1728738623118",
+      "ai": true,
+      "type": "choice",
+      "question": "Question: What is the derivative of the function f(x) = 3x^2 + 4x?",
+      "choices": {
+        "1": "f'(x",
+        "2": "f'(x",
+        "3": "f'(x",
+        "4": "f'(x"
+      },
+      "answer": "1",
+      "solution": "The correct answer is based on differentiation rules."
+    },
+    {
+      "number": "1728738623515",
+      "ai": true,
+      "type": "choice",
+      "question": "Question: What is the derivative of the function f(x) = 3x^2 + 4x - 2?",
+      "choices": {
+        "1": "= 6x + 4",
+        "2": "= 3x + 2",
+        "3": "= 6x - 4",
+        "4": "= 3x + 4"
+      },
+      "answer": "1",
+      "solution": "The correct answer is based on differentiation rules."
     }
   ]
 }
