--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -14,6 +14,8 @@
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.24.1",
     "react-select": "^5.8.1"
+    "openai": "^4.67.1",
+
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
