--- a/Backend/db/Subjects/math/Syllabus/algebra/quiz/easy.json
+++ b/Backend/db/Subjects/math/Syllabus/algebra/quiz/easy.json
@@ -260,6 +260,34 @@
       },
       "answer": "1",
       "solution": "To find the derivative of a function, we apply the power rule which states that the derivative of x^n is nx^(n-1). Taking the derivative of each term in f(x) = 3x^2 + 4x - 1 gives f'(x) = 6x + 4."
+    },
+    {
+      "number": "1729364554425",
+      "ai": true,
+      "type": "choice",
+      "question": "Question: What is the derivative of the function f(x) = 3x^2 + 4x - 2?",
+      "choices": {
+        "1": "f'(x",
+        "2": "f'(x",
+        "3": "f'(x",
+        "4": "f'(x"
+      },
+      "answer": "1",
+      "solution": "To find the derivative of a function, we apply the power rule. For f(x) = ax^n, the derivative is f'(x) = n * ax^(n-1). In this case, f'(x) = 6 * 3x^(2-1) + 4 * 1x^(1-1) - 0 = 6x + 4."
+    },
+    {
+      "number": "1729364651005",
+      "ai": true,
+      "type": "choice",
+      "question": "Question: Which of the following represents the derivative of the function f(x) = 3x^2 - 4x + 2 with respect to x?",
+      "choices": {
+        "1": "f'(x",
+        "2": "f'(x",
+        "3": "f'(x",
+        "4": "f'(x"
+      },
+      "answer": "1",
+      "solution": "To find the derivative of a function, we apply the power rule which states that the derivative of x^n is n*x^(n-1). Therefore, the derivative of 3x^2 is 2*3x^(2-1) = 6x. Similarly, the derivative of -4x is -4. The derivative of a constant term (like 2) is 0. So, putting it all together, the derivative of f(x) = 3x^2 - 4x + 2 is f'(x) = 6x - 4."
     }
   ]
 }
